수정 - template : base, header, footer

--- a/templates/layout/footer.html
+++ b/templates/layout/footer.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<footer>
+        <hr>
+        <div id="copy">
+            <span>copyright &copy; 2022 ytty. All Right Reserved.</span>
+        </div>
+    </footer>
