--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
+    {% load static %}
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>{% block title %} {% endblock %}</title>
+    <style>
+        {% block style %}{% endblock %}
+    </style>
+
 </head>
 <body>
-
+<div id="wrap">
+    {% include 'layout/header.html' %}
+    <div id="main">
+        {% block content %} {% endblock %}
+    </div>
+    {% include 'layout/footer.html' %}
+</div>
+{% block jscript %}{% endblock %}
 </body>
 </html>
