--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+ <header>
+        <h1>Python 웹프로젝트 v1</h1>
+        <div id="menu">
+        <nav>
+            <ul>
+                <li><a href="../">Home</a></li>
+                <li><a href="/join">회원가입</a></li>
+                <li><a href="/login">로그인</a></li>
+                <li><a href="/list">게시판</a></li>
+                <li><a href="/myinfo">회원정보</a></li>
+            </ul>
+        </nav>
+        </div>
+        <hr>
+    </header>
