--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -4,6 +4,8 @@
     {% load static %}
     <meta charset="UTF-8">
     <title>{% block title %} {% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'css/normalize.css' %}">
+    <link rel="stylesheet" href="{% static 'css/webproject.css' %}">
     <style>
         {% block style %}{% endblock %}
     </style>
