--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -3,7 +3,7 @@
         <div id="menu">
         <nav>
             <ul>
-                <li><a href="../">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <li><a href="/join">회원가입</a></li>
                 <li><a href="/login">로그인</a></li>
                 <li><a href="/list">게시판</a></li>
