--- a/templates/board/write.html
+++ b/templates/board/write.html
@@ -1,26 +1,18 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <title>Python 웹프로젝트 v1</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/webproject.css">
-    <style>
+
+{% extends 'base.html' %}
+
+{% block title %} Semi Project v1-Django :WRITE {% endblock %}
+{% block style %}
         form div {
             margin-top: 10px;
             margin-bottom: 5px;
         }
 
         form {
-            width: 60%;  /* 가로 길이 지정을 해야 좌우여백 auto가 먹음, %로 지정해야됨 */
+            width: 60%;
             margin: 65px auto 10px;
-          /*  border: 1px solid red; */
         }
 
-        /* #write {
-            border: 1px solid red;
-            margin: 20px;
-        } */
         span { padding-left: 5px; }
 
         form label {
@@ -35,29 +27,8 @@
             margin-top: 5px;
         }
 
-        /*  form label:nth-child(3) { vertical-align: top } 높이가 없어서 세로정렬 안 먹힘힘 */
-
-
-   </style>
-</head>
-<body>
-<div id="wrap">
-    <header>
-        <h1>Python 웹프로젝트 v1</h1>
-        <div id="menu">
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="join.html">회원가입</a></li>
-                <li><a href="login.html">로그인</a></li>
-                <li><a href="board.html">게시판</a></li>
-                <li><a href="myinfo.html">회원정보</a></li>
-            </ul>
-        </nav>
-        </div>
-        <hr>
-    </header>
-    <div id="main">
+{% endblock %}
+{% block content %}
         <h2>게시판 새글쓰기</h2>
         <div id="write">
             <form name="boardfrm" method="post" action="board.do">
@@ -70,13 +41,4 @@
                     <button type="button">입력완료</button> <button type="button">다시입력</button></div>
                 </form>
         </div>
-    </div>
-    <footer>
-        <hr>
-        <div id="copy">
-            <span>copyright &copy; 2022 ytty. All Right Reserved.</span>
-        </div>
-    </footer>
-</div>
-</body>
-</html>
+{% endblock %}
