--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,11 @@
-{% extends 'base.html' %}
+{% extends 'layout/base.html' %}
 
 {% block title %} Semi Project v1-Django :INDEX {% endblock %}
 
+
 {% block content %}
-    <div id="main">
         <h1> 본문본문</h1>
-    </div>
 
 {% endblock %}
+
+{% block jscript %}{% endblock %}
