--- a/templates/member/join.html
+++ b/templates/member/join.html
@@ -2,8 +2,7 @@
 {% extends 'base.html' %}
 
 {% block title %} Semi Project v1-Django :JOIN {% endblock %}
-{% block style %} {% endblock %}
-<style>
+{% block style %}
     form { font-size: 14px; width: 350px;
            margin: 120px auto;
     }
@@ -12,12 +11,11 @@
                 font-weight: bold; }
     input { margin-top: 5px; margin-bottom: 5px }
 
-</style>
+{% endblock %}
 
 {% block content %}
- <div id="main">
             <h2>회원가입</h2>
-        <form name="join" method="post" action="join.do">
+        <form name="join" method="post">
             <div><label for="userid">아이디</label>
             <input type="text" name="userid" id="userid" maxlength="18">
             </div>
@@ -34,11 +32,10 @@
             <input type="text" name="email" id="email">
             </div>
             <div><label></label>
-                <button type="subit"> 입력완료</button>
+                <button type="submit"> 입력완료</button>
                 <button type="reset">다시입력</button>
 
            </div>
         </form>
-    </div>
 
 {% endblock %}
