수정 - base.html 경로수정

--- a/templates/board/write.html
+++ b/templates/board/write.html
@@ -1,5 +1,5 @@
 
-{% extends 'base.html' %}
+{% extends 'layout/base.html' %}
 
 {% block title %} Semi Project v1-Django :WRITE {% endblock %}
 {% block style %}
