수정 - 하위페이지 링크수정

--- a/templates/board/view.html
+++ b/templates/board/view.html
@@ -40,7 +40,7 @@
 2월 14일, 슈퍼볼에 맞춰서 티저 예고편이 공개되었다. 상단의 영상 외에도 슈퍼볼 TV 스팟에서만 추가된 장면들도 있다.
 프로페서 X와 캡틴 마블인 마리아 램보 혹은 슈퍼리어 아이언맨으로 추정되는 인물이 등장한다.
                 이전작들과 달리 닥터가 아가모토의 눈을 착용하는 위치가 만화처럼 망토 사이 부착되었으며 공중부양 망토의 뒤쪽에도 푸른색 방패문양이 생겼다.</div></td></tr>
-            <tr><td colspan="2"><button type="button" onclick="location.href='board.html'">목록으로이동</button> <button type="button" onclick="location.href='write.html'">새글쓰기</button>
+            <tr><td colspan="2"><button type="button" onclick="location.href='/list">목록으로이동</button> <button type="button" onclick="location.href='write.html'">새글쓰기</button>
                 <button type="button">수정하기</button> <button type="button">삭제하기</button></td></tr>
         </table>
 {% endblock %}
