--- a/templates/board/write.html
+++ b/templates/board/write.html
@@ -31,7 +31,7 @@
 {% block content %}
         <h2>게시판 새글쓰기</h2>
         <div id="write">
-            <form name="boardfrm" method="post" action="board.do">
+            <form name="boardfrm" method="post">
                 <div><label for="title">제목</label> <input type="text" name="title" id="title"></div>
                 <div><label for="writer">작성자</label><span>nakanaka</span></div>
                 <div><label for="contents" class="up">본문</label>
