--- a/templates/member/myinfo.html
+++ b/templates/member/myinfo.html
@@ -1,6 +1,6 @@
 {% extends 'layout/base.html' %}
 
-{% block title %} Semi Project v1-Django :INDEX {% endblock %}
+{% block title %} Semi Project v1-Django :M.MYINFO {% endblock %}
 
 {% block style %}
         form label { display: inline-block; width: 200px;
