--- a/templates/board/list.html
+++ b/templates/board/list.html
@@ -48,7 +48,7 @@
     <h2>게시판</h2>
         <table id="board">
             <tr>
-                <td colspan="5" id="new"><button type="button" onclick="location.href='write.html'">새글쓰기</button></a></td>
+                <td colspan="5" id="new"><button type="button" onclick="location.href='board/write.html'">새글쓰기</button></a></td>
             </tr>
             <colgroup>
                 <col style="width: 7%">
@@ -67,7 +67,7 @@
 
             <tr>
                 <td>1</td>
-                <td><a href="view.html?bno=1">시간은 금이라구, 친구! 진짜라구, 친구! 정말이라구, 친구! 시간은 금이라구, 친구!</a></td>
+                <td><a href="/view?bno=1">시간은 금이라구, 친구! 진짜라구, 친구! 정말이라구, 친구! 시간은 금이라구, 친구!</a></td>
                 <td>tytrackmottomotto</td>
                 <td>2022-05-27</td>
                 <td>127</td>
