--- a/templates/member/join.html
+++ b/templates/member/join.html
@@ -1,7 +1,7 @@
 
 {% extends 'layout/base.html' %}
 
-{% block title %} Semi Project v1-Django :JOIN {% endblock %}
+{% block title %} Semi Project v1-Django :M.JOIN {% endblock %}
 {% block style %}
     form { font-size: 14px; width: 350px;
            margin: 120px auto;
