--- a/templates/member/login.html
+++ b/templates/member/login.html
@@ -1,6 +1,6 @@
 {% extends 'layout/base.html' %}
 
-{% block title %} Semi Project v1-Django :JOIN {% endblock %}
+{% block title %} Semi Project v1-Django :M.JOIN {% endblock %}
 {% block style %}
         form { font-size: 14px; width: 350px;
                 margin: 120px auto; }
