--- a/templates/member/join.html
+++ b/templates/member/join.html
@@ -11,31 +11,81 @@
                 font-weight: bold; }
     input { margin-top: 5px; margin-bottom: 5px }
 
+    #error { color:red;
+            text-align: center;
+            list-style: none;
+            font-weight: bold;
+            padding: 5px; }
+
 {% endblock %}
 
 {% block content %}
             <h2>회원가입</h2>
-        <form name="join" method="post">
+        <form name="joinfrm" id="joinfrm" method="post">
+        <div id="error">{{ error|safe }}</div>
+            {% csrf_token %}
             <div><label for="userid">아이디</label>
-            <input type="text" name="userid" id="userid" maxlength="18">
+            <input type="text" name="userid" id="userid" value="{{ form.userid }}">
             </div>
             <div><label for="pwd">비밀번호</label>
-            <input type="password" name="pwd" id="pwd" maxlength="18">
+            <input type="password" name="pwd" id="pwd">
             </div>
-            <div><label for="pwd">비밀번호 확인</label>
-            <input type="password" name="pwd" id="pwd2" maxlength="18">
+            <div><label for="pwd2">비밀번호 확인</label>
+            <input type="password" name="pwd2" id="pwd2">
             </div>
             <div><label for="name">이름</label>
-            <input type="text" name="name" id="name" maxlength="18">
+            <input type="text" name="name" id="name" value="{{ form.name }}">
             </div>
             <div><label for="email">이메일</label>
-            <input type="text" name="email" id="email">
+            <input type="text" name="email" id="email" value="{{ form.email }}">
             </div>
             <div><label></label>
-                <button type="submit"> 입력완료</button>
+                <button type="submit" id="joinbtn"> 입력완료</button>
                 <button type="reset">다시입력</button>
 
            </div>
         </form>
 
+{% endblock %}
+
+{% block jscript %}
+    <!--
+<script>
+    const joinfrm = document.querySelector('#joinfrm');
+    joinfrm.addEventListener('submit', (e) => {
+        let userid = document.joinfrm.userid;
+        let pwd = document.joinfrm.pwd;
+        let pwd2 = document.joinfrm.pwd2;
+        let name = document.joinfrm.name;
+        let email = document.joinfrm.email;
+
+        if (userid.value == '') {
+            alert('아이디를 입력하세요');
+            userid.focus();
+            e.preventDefault();
+        } else if (pwd.value == '') {
+            alert('비밀번호를 입력하세요');
+            pwd.focus();
+            e.preventDefault();
+        } else if (pwd2.value == '') {
+            alert('비밀번호를 확인하세요');
+            pwd2.focus();
+            e.preventDefault();
+        } else if (name.value == '') {
+            alert('이름을 입력하세요');
+            name.focus();
+            e.preventDefault();
+        } else if (email.value == '') {
+            alert('이메일을 입력하세요');
+            email.focus();
+            e.preventDefault();
+        } else if (pwd.value !== pwd2.value) {
+            alert('비밀번호가 일치하지 않습니다');
+            pwd.focus();
+            e.preventDefault();
+        }
+    });
+</script>
+
+-->
 {% endblock %}
