--- a/templates/member/joinok.html
+++ b/templates/member/joinok.html
@@ -10,17 +10,12 @@
         input { margin-top: 5px; margin-bottom: 5px }
 {% endblock %}
 {% block content %}
-        <h2>로그인</h2>
-        <form name="loginfrm" method="post" action="login.do">
-            <div><label for="userid">아이디</label>
-            <input type="text" name="userid" id="userid" maxlength="18">
-            </div>
-            <div><label for="pwd">비밀번호</label>
-            <input type="password" name="pwd" id="pwd" maxlength="18">
-            </div>
-            <div><label></label>
-            <button type="button"> 로그인</button>
-            </div>
-        </form>
+        <h2>회원가입 완료</h2>
+    <h3>아이디 : {{ form.userid }}</h3>
+    <h3>이름 : {{ form.name }}</h3>
+    <h3>이메일 : {{ form.email }}</h3>
+    <hr>
+
+    <div><a href="/login">로그인 하러 가기</a></div>
 
 {% endblock %}
