--- a/templates/board/list.html
+++ b/templates/board/list.html
@@ -48,7 +48,7 @@
     <h2>게시판</h2>
         <table id="board">
             <tr>
-                <td colspan="5" id="new"><button type="button" onclick="location.href='board/write.html'">새글쓰기</button></a></td>
+                <td colspan="5" id="new"><button type="button" onclick="location.href='/write'">새글쓰기</button></a></td>
             </tr>
             <colgroup>
                 <col style="width: 7%">
