--- a/templates/member/join.html
+++ b/templates/member/join.html
@@ -20,6 +20,9 @@
 {% endblock %}
 
 {% block content %}
+    {% if request.session.userid %}
+    <script>location.href = '/';</script>
+    {% endif %}
             <h2>회원가입</h2>
         <form name="joinfrm" id="joinfrm" method="post">
         <div id="error">{{ error|safe }}</div>
@@ -27,8 +30,8 @@
             <div><label for="userid">아이디</label>
             <input type="text" name="userid" id="userid" value="{{ form.userid }}">
             </div>
-            <div><label for="pwd">비밀번호</label>
-            <input type="password" name="pwd" id="pwd">
+            <div><label for="passwd">비밀번호</label>
+            <input type="password" name="passwd" id="passwd">
             </div>
             <div><label for="pwd2">비밀번호 확인</label>
             <input type="password" name="pwd2" id="pwd2">
@@ -49,12 +52,12 @@
 {% endblock %}
 
 {% block jscript %}
-    <!--
+{% comment %}
 <script>
     const joinfrm = document.querySelector('#joinfrm');
     joinfrm.addEventListener('submit', (e) => {
         let userid = document.joinfrm.userid;
-        let pwd = document.joinfrm.pwd;
+        let passwd = document.joinfrm.passwd;
         let pwd2 = document.joinfrm.pwd2;
         let name = document.joinfrm.name;
         let email = document.joinfrm.email;
@@ -65,7 +68,7 @@
             e.preventDefault();
         } else if (pwd.value == '') {
             alert('비밀번호를 입력하세요');
-            pwd.focus();
+            passwd.focus();
             e.preventDefault();
         } else if (pwd2.value == '') {
             alert('비밀번호를 확인하세요');
@@ -79,13 +82,12 @@
             alert('이메일을 입력하세요');
             email.focus();
             e.preventDefault();
-        } else if (pwd.value !== pwd2.value) {
+        } else if (passwd.value !== pwd2.value) {
             alert('비밀번호가 일치하지 않습니다');
-            pwd.focus();
+            passwd.focus();
             e.preventDefault();
         }
     });
 </script>
-
--->
+{% endcomment %}
 {% endblock %}
