--- a/templates/member/login.html
+++ b/templates/member/login.html
@@ -8,19 +8,46 @@
             text-align: right;
             font-weight: bold; }
         input { margin-top: 5px; margin-bottom: 5px }
+
+        #error { color: red; }
+
+
 {% endblock %}
 {% block content %}
         <h2>로그인</h2>
-        <form name="loginfrm" method="post" action="login.do">
+        <form name="loginfrm" id="loginfrm" method="post">
+            {% csrf_token %}
             <div><label for="userid">아이디</label>
-            <input type="text" name="userid" id="userid" maxlength="18">
+            <input type="text" name="userid" id="userid">
             </div>
-            <div><label for="pwd">비밀번호</label>
-            <input type="password" name="pwd" id="pwd" maxlength="18">
+            <div><label for="passwd">비밀번호</label>
+            <input type="password" name="passwd" id="passwd">
             </div>
             <div><label></label>
-            <button type="button"> 로그인</button>
+            <button type="button" id="loginbtn"> 로그인</button> <!-- submit/button 따로 -->
             </div>
+        <div id="error">{{ error }}</div>
         </form>
+
+{% endblock %}
+{% block jscript %}
+<script>
+    const loginbtn = document.querySelector('#loginbtn');
+    loginbtn.addEventListener('click', () => {
+        const userid = document.loginfrm.userid;
+        const passwd = document.loginfrm.passwd;
+        if (userid.value == "") {
+            alert('아이디를 입력하세요');
+            userid.focus();
+            return;
+        } else if (passwd.value == "") {
+            alert('비밀번호를 입력하세요');
+            passwd.focus();
+            return;
+        } else {
+            document.loginfrm.submit();
+        }
+    });
+</script>
 
 {% endblock %}
