--- a/templates/board/list.html
+++ b/templates/board/list.html
@@ -64,85 +64,16 @@
                 <th>작성일</th>
                 <th>조회</th>
             </tr>
+            {% for b in bds %}
 
             <tr>
-                <td>1</td>
-                <td><a href="/view?bno=1">시간은 금이라구, 친구! 진짜라구, 친구! 정말이라구, 친구! 시간은 금이라구, 친구!</a></td>
-                <td>tytrackmottomotto</td>
-                <td>2022-05-27</td>
-                <td>127</td>
+                <td>{{ b.id }}</td>
+                <td><a href="/view?bno={{ b.id }}">{{ b.title }}</a></td>
+                <td>{{ b.userid }}</td>
+                <td>{{ b.regdate|date:'Y-m-d'}}</td>
+                <td>{{ b.views }}</td>
             </tr>
-            <tr>
-                <td>2</td>
-                <td>시간은 금이라구, 친구! 진짜라구, 친구! 정말이라구, 친구! 정말이라구, 친구! 시간은 금이라구, 친구</td>
-                <td>nakanaka</td>
-                <td>2022-05-27</td>
-                <td>127</td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>시간은 금이라구, 친구! 진짜라구, 친구! 정말이라구, 친구! 정말이라구, 친구! 시간은 금이라구, 친구</td>
-                <td>nakanaka</td>
-                <td>2022-05-27</td>
-                <td>127</td>
-            </tr>
-            <tr>
-                <td>4</td>
-                <td>시간은 금이라구, 친구! 진짜라구, 친구! 정말이라구, 친구! 정말이라구, 친구! 시간은 금이라구, 친구</td>
-                <td>nakanaka</td>
-                <td>2022-05-27</td>
-                <td>127</td>
-            </tr>
-            <tr>
-                <td>5</td>
-                <td>시간은 금이라구, 친구! 진짜라구, 친구! 정말이라구, 친구! 정말이라구, 친구! 시간은 금이라구, 친구</td>
-                <td>nakanaka</td>
-                <td>2022-05-27</td>
-                <td>127</td>
-            </tr>
-           <tr>
-                <td>6</td>
-                <td>시간은 금이라구, 친구! 진짜라구, 친구! 정말이라구, 친구! 정말이라구, 친구! 시간은 금이라구, 친구</td>
-                <td>nakanaka</td>
-                <td>2022-05-27</td>
-                <td>127</td>
-            </tr>
-            <tr>
-                <td>7</td>
-                <td>시간은 금이라구, 친구! 진짜라구, 친구! 정말이라구, 친구! 정말이라구, 친구! 시간은 금이라구, 친구</td>
-                <td>nakanaka</td>
-                <td>2022-05-27</td>
-                <td>127</td>
-            </tr>
-            <tr>
-                <td>8</td>
-                <td>시간은 금이라구, 친구! 진짜라구, 친구! 정말이라구, 친구! 정말이라구, 친구! 시간은 금이라구, 친구</td>
-                <td>nakanaka</td>
-                <td>2022-05-27</td>
-                <td>127</td>
-            </tr>
-            <tr>
-                <td>9</td>
-                <td>시간은 금이라구, 친구! 진짜라구, 친구! 정말이라구, 친구! 정말이라구, 친구! 시간은 금이라구, 친구</td>
-                <td>nakanaka</td>
-                <td>2022-05-27</td>
-                <td>127</td>
-            </tr>
-            <tr>
-                <td>10</td>
-                <td>시간은 금이라구, 친구! 진짜라구, 친구! 정말이라구, 친구! 정말이라구, 친구! 시간은 금이라구, 친구</td>
-                <td>nakanaka</td>
-                <td>2022-05-27</td>
-                <td>127</td>
-            </tr>
-            <tr>
-                <td>11</td>
-                <td>시간은 금이라구, 친구! 진짜라구, 친구! 정말이라구, 친구! 정말이라구, 친구! 시간은 금이라구, 친구</td>
-                <td>nakanaka</td>
-                <td>2022-05-27</td>
-                <td>127</td>
-            </tr>
-
+            {% endfor %}
 
         </table>
         <ul id="pgnav">
