--- a/templates/board/modify.html
+++ b/templates/board/modify.html
@@ -29,27 +29,27 @@
 
 {% endblock %}
 {% block content %}
-        <h2>게시판 새글쓰기</h2>
+        <h2>본문글 수정하기</h2>
         <div id="write">
             <form name="boardfrm" method="post">
                 {% csrf_token %}
-                <div><label for="title">제목</label> <input type="text" name="title" id="title"></div>
-                <div><label for="writer">작성자</label><span>nakanaka</span></div>
+                <div><label for="title">제목</label> <input type="text" name="title" id="title" value="{{ bd.title }}"></div>
+                <div><label for="writer">작성자</label><span>{{ bd.member.userid }}</span></div>
                 <div><label for="contents" class="up">본문</label>
-                <textarea name="contents" id="contents" rows="10" cols="50" style="resize: none"></textarea>
+                <textarea name="contents" id="contents" rows="10" cols="50" style="resize: none">{{ bd.contents }}</textarea>
                 </div>
                 <div><label></label>
-                    <button type="button" id="boardbtn">입력완료</button>
+                    <button type="button" id="mdfokbtn">수정완료</button>
                     <button type="button" >다시입력</button></div>
-                <input type="hidden" name="memberid" value="{{ request.session.userid_id }}"> <!-- form범위내에 숨겨서 넣으면 서버에 전송됨-->
+                <input type="hidden" name="bno" value="{{ bd.id }}"> <!-- form범위내에 숨겨서 넣으면 서버에 전송됨-->
                 </form>
         </div>
 {% endblock %}
 
 {% block jscript %}
     <script>
-    const boardbtn = document.querySelector('#boardbtn')
-    boardbtn.addEventListener('click', () => {
+    const mdfokbtn = document.querySelector('#mdfokbtn')
+    mdfokbtn.addEventListener('click', () => {
         const title = document.boardfrm.title;
         const contents = document.boardfrm.contents;
         if (title.value == '') {
