--- a/templates/board/list.html
+++ b/templates/board/list.html
@@ -48,7 +48,7 @@
     <h2>게시판</h2>
         <table id="board">
             <tr>
-                <td colspan="5" id="new"><button type="button" onclick="location.href='/write'">새글쓰기</button></a></td>
+                <td colspan="5" id="new"><button type="button" onclick="location.href='/write'">새글쓰기</button></td>
             </tr>
             <colgroup>
                 <col style="width: 7%">
@@ -69,7 +69,8 @@
             <tr>
                 <td>{{ b.id }}</td>
                 <td><a href="/view?bno={{ b.id }}">{{ b.title }}</a></td>
-                <td>{{ b.userid }}</td>
+                {#<td>{{ b.userid }}</td>#}
+                <td>{{ b.member.userid }}</td>
                 <td>{{ b.regdate|date:'Y-m-d'}}</td>
                 <td>{{ b.views }}</td>
             </tr>
@@ -88,4 +89,20 @@
 
 {% endblock %}
 
-{% block jscript %}{% endblock %}
+{% block jscript %}
+<script>
+    const bditems = document.getElementsByTagName('td');
+    const bdcnt = '{{ bds.count }}';
+    {#document.write(bditems.length, '<br>');#}
+    {#document.write(bdcnt, '<br>');#}
+    {#document.write(bditems[1].innerHTML, '<br>');#}
+    {#document.write(bditems[6].innerHTML, '<br>');#}
+    {#document.write(bditems[11].innerHTML, '<br>');#}
+    {#document.write(bditems[16].innerHTML, '<br>');#}
+
+    for(let i = bdcnt, pos = 1; i > 0; --i, pos = pos +5) {
+        bditems[pos].innerHTML =  i;
+    }
+
+</script>
+{% endblock %}
